--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "swagger-autogen": "node swagger.js"
+    "swagger-autogen": "node swagger.js",
+    "test": "mocha '**/*.test.js' --ignore '**/node_modules/**/*'",
+    "coverage": "nyc --reporter=html --reporter=text npm run test"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -14,8 +16,15 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.19",
+    "nyc": "^15.1.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.19",
+    "sinon": "^14.0.0",
+    "sinon-chai": "^3.7.0"
   }
 }
